<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskList</string>
    <string name="detail_title">Titel:</string>
    <string name="detail_description">Beschreibung:</string>
    <string name="detail_priority">Priorität:</string>
    <string name="detail_save">Speichern</string>
    <string name="detail_cancel">Abbrechen</string>
    <string name="error_title_empty">Geben Sie bitte einen Titel ein!</string>
    <string name="error_description_null">Keine Beschreibung vorhanden!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_priorities">Prioritäten bearbeiten</string>
    <string name="action_categories">Kategorien bearbeiten</string>
    <string name="action_add_task">Task hinzufügen</string>
    <string name="settings_fontsize_head_title">Schriftgröße Titel</string>
    <string name="settings_fontsize_tail_title">Schriftgröße Beschreibung</string>
    <string name="title_activity_category">Kategorien verwalten</string>
    <string name="title_activity_priority">Prioritäten verwalten</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_task">Tasks verwalten</string>
    <string name="dot">.</string>
    <string name="action_add_priority">Priorität hinzufügen</string>
    <string name="action_add_category">Kategorie hinzufügen</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="name">Name</string>
    <string name="value">Wert</string>
    <string name="noPrio">Keine Priorität angelegt!</string>
    <string name="noCategory">Keine Kategorie vorhanden!</string>
    <string name="detail_category">Kategorie</string>
    <string name="message_delete_priority">Priorität kann nicht gelöscht werden, da sie in Tasks verwendet wird. Entfernen Sie sie aus allen Tasks, dann können Sie die Priorität löschen.</string>
    <string name="message_delete_category">Kategorie kann nicht gelöscht werden, da sie in Tasks verwendet wird. Entfernen Sie sie aus allen Tasks, dann können Sie die Kategorie löschen.</string>
    <string name="titel">Titel</string>
    <string name="priority">Priorität</string>
    <string name="description">Beschreibung</string>
    <string name="expiredate">Ablaufdatum</string>
    <string name="categories">Kategorien</string>
    <string name="unknown_columns_in_projection">Unknown columns in projection</string>

</resources>
