<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/listElementBackGround" >

    <TextView
        android:id="@+id/listelement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:paddingTop="@dimen/list_element_padding"
        android:text="@string/titel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listelement_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/listelement_title"
        android:gravity="right"
        android:paddingTop="@dimen/list_element_padding"
        android:text="@string/priority" />

    <TextView
        android:id="@+id/listelement_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listelement_title"
        android:gravity="bottom"
        android:paddingTop="@dimen/list_element_padding"
        android:text="@string/description"
        android:textColor="@color/listElementText" />

    <TextView
        android:id="@+id/listelement_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listelement_description"
        android:gravity="bottom"
        android:paddingTop="@dimen/list_element_padding"
        android:text="@string/expiredate"
        android:textColor="@color/listElementText" />

    <TextView
        android:id="@+id/listelement_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/listelement_date"
        android:layout_alignBottom="@+id/listelement_date"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/listelement_date"
        android:gravity="right"
        android:paddingTop="@dimen/list_element_padding"
        android:text="@string/categories"
        android:textColor="@color/listElementText" />

</RelativeLayout>